fixed bugs with scrollbar overlap and set up static positionting for the video chat div

--- a/group1/comm/static/comm_tool.css
+++ b/group1/comm/static/comm_tool.css
@@ -1,6 +1,14 @@
 html { 
   font-size: 62.5%; 
+  height: 100%;
+  margin: 0;
 }
+
+body{
+  height: 100%;
+  margin: 0;
+}
+
 div.absolute {
     position: absolute;
     top: 80px;
@@ -94,6 +102,7 @@ div#sidebar {
   max-width: 50%;
   position: relative;
   overflow-y: wrap;
+  overflow-x: auto;
 }
 
 div#top_bar {
@@ -511,21 +520,21 @@ button#deleteButton {
 
 .message_area{
   height: 850px;
-  width: 100%;
+  width: 80%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 .videoArea{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;  
-  width: 50%;
-  height: 70%;
+  align-content: flex-end;
+  width: 45%;
+  height: 430px;
 }
 
 .videoItems{
@@ -547,4 +556,13 @@ button#deleteButton {
   display: flex;
   flex-direction: row;
   align-content: left;
+}
+
+/* Hide scrollbar in order to avoid overlap and visual artifacts */
+#element::-webkit-scrollbar { 
+  display: none; 
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
